--- a/Final Project/FinalProject.ipynb
+++ b/Final Project/FinalProject.ipynb
@@ -327,7 +327,7 @@
     }
    ],
    "source": [
-    "# Task 1-1: use linear regression in sklearn\n",
+    "# linear regression in sklearn\n",
     "print('1')\n",
     "test_target = np.reshape(test_target, (test_target.shape[0], 1))\n",
     "train_target = np.reshape(train_target, (train_target.shape[0], 1))\n",
@@ -336,7 +336,7 @@
     "print(datalinmod)\n",
     "\n",
     "#__________________________________________________________\n",
-    "# Task 1-2: show intercept and coefficents\n",
+    "# intercept and coefficents\n",
     "print('\\n2')\n",
     "\n",
     "intercept = datalinmod.intercept_\n",
@@ -348,7 +348,7 @@
     "print(coef)\n",
     "\n",
     "#__________________________________________________________\n",
-    "# Task 1-3: show errors on training dataset and testing dataset\n",
+    "# errors on training dataset and testing dataset\n",
     "print('\\n3')\n",
     "\n",
     "#print('train:')\n",
@@ -370,7 +370,7 @@
     "print(n4)\n",
     "\n",
     "#__________________________________________________________\n",
-    "# Task 1-4: show plot a figure to show your predictions and real prices on the testing dataset\n",
+    "# plot a figure to show your predictions and real prices on the testing dataset\n",
     "print('\\n4')\n",
     "\n",
     "plt.ylabel('features')\n",
